--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,27 +1,24 @@
 ---
 galaxy_info:
+  role_name: hosts
   author: Tomoyuki Sakurai
   description: Manage hosts(5)
   company: Reallyenglish
   license: BSD
   min_ansible_version: 2.0
   platforms:
-  - name: FreeBSD
-    versions:
-    - 10.3
-  - name: OpenBSD
-    versions:
-    - 5.9
-    - 6.0
-  - name: Ubuntu
-    versions:
-    - trusty
-    - xenial
-  - name: EL
-    versions:
-      - 7
+    - name: FreeBSD
+      versions:
+        - 12.0
+    - name: OpenBSD
+      versions:
+        - 6.5
+    - name: Ubuntu
+      versions:
+        - bionic
+    - name: EL
+      versions:
+        - 7
   galaxy_tags:
-    - system
     - hosts
 dependencies:
-#  - { role: username.common, some_parameter: 3 }
